--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,86 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline: none; }
 
 :root {
-  --color: #ffd900; }
+  --color: "#2dc7aa"; }
 
 body {
   background-image: url(../img/backg.svg);
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: "Roboto", sans-serif; }
+  font-family: "Roboto", sans-serif;
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+  body::-webkit-scrollbar {
+    width: 5px; }
+  body::-webkit-scrollbar-track {
+    background: #c2ffdd; }
+  body::-webkit-scrollbar-thumb {
+    background-color: var(--color);
+    border-radius: 8px;
+    transition: 0.3s; }
+
+#cursor {
+  height: 20px;
+  width: 20px;
+  border: 2px solid var(--color);
+  position: absolute;
+  border-radius: 50%;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none; }
+
+.active::after {
+  content: "";
+  height: 20px;
+  width: 20px;
+  border: 1110px solid var(--color);
+  position: absolute;
+  border-radius: 50%;
+  opacity: 0.3;
+  animation: cursoranim 0.3s; }
+
+@keyframes cursoranim {
+  from {
+    transform: scale(0); }
+  to {
+    transform: scale(1); } }
+
+.animate-box {
+  width: 10px;
+  height: 10px;
+  background-color: var(--color);
+  border-radius: 50%;
+  position: absolute;
+  z-index: -10000;
+  animation: box 60s infinite;
+  top: 50px;
+  left: -300px; }
+
+@keyframes box {
+  from {
+    transform: translateX(0px) translateY(0); }
+  50% {
+    transform: translateX(2000px) translateY(100px); }
+  51% {
+    transform: translateX(2000px) translateY(300px); }
+  99% {
+    transform: translateX(0px) translateY(600px); }
+  from {
+    transform: translateX(0px) translateY(0); } }
 
 header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 10%; }
+  padding: 20px 8% 20px 10%; }
   header nav .nav-link {
     position: relative; }
   header nav .nav-link::after {
@@ -48,7 +112,7 @@ header nav {
     text-decoration: none;
     padding: 0 30px;
     color: black;
-    font-size: 25px;
+    font-size: 22px;
     text-transform: uppercase;
     font-weight: 550;
     transition: 0.7s; }
@@ -73,10 +137,10 @@ svg {
 .test div {
   width: calc(100% / 5); }
 
-.test .D1 {
+.test .D2 {
   background-color: #c2ffdd; }
 
-.test .D2 {
+.test .D1 {
   background-color: var(--color); }
 
 #cat-hand {
@@ -153,7 +217,7 @@ svg {
 
 .title-text h3::after {
   content: " ";
-  height: 2px;
+  height: 4px;
   width: 18vw;
   background: var(--color);
   display: inline-block;
@@ -165,7 +229,7 @@ svg {
   color: var(--color);
   border: 3px solid var(--color);
   background: none;
-  padding: 10px 40px;
+  padding: 10px 60px;
   font-size: 16px;
   border: 3px solid;
   margin-left: 40px;
@@ -176,40 +240,11 @@ svg {
   transition: all 0.5s;
   border-radius: 2px; }
 
-.hire-me:hover {
-  background: var(--color);
-  color: white;
-  border: 3px solid var(--color); }
-
-.hire-me::before,
-.hire-me::after {
-  content: "";
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border: 3px solid var(--color);
-  transition: all 0.5s;
-  border-radius: 2px; }
-
-.hire-me::before {
-  top: -10px;
-  left: -10px;
-  border-width: 3px 0 0 3px; }
-
-.hire-me::after {
-  bottom: -10px;
-  right: -10px;
-  border-width: 0 3px 3px 0; }
-
-.hire-me:hover::before,
-.hire-me:hover::after {
-  width: calc(100% + 23px);
-  height: calc(100% + 23px); }
-
 .get-cv {
   padding: 10px 45px;
   overflow: hidden;
   transition: 1s all ease;
+  border-radius: 55px;
   border: 3px solid var(--color); }
 
 .get-cv:hover {
@@ -229,3 +264,29 @@ svg {
 
 .get-cv:hover::before {
   width: 100%; }
+
+.hire-me {
+  padding: 10px 45px;
+  overflow: hidden;
+  transition: 1s all ease;
+  border-radius: 55px;
+  color: white;
+  border: 3px solid var(--color); }
+
+.hire-me:hover {
+  color: var(--color); }
+
+.hire-me::before {
+  content: "";
+  background: var(--color);
+  position: absolute;
+  height: 380%;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  z-index: -1;
+  transition: all 0.8s ease; }
+
+.hire-me:hover::before {
+  width: 0; }
