--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   align-items: center;
   justify-content: center;
   pointer-events: none;
-  z-index: 111; }
+  z-index: 11111; }
 
 .active::after {
   content: "";
@@ -179,12 +179,16 @@ svg {
   40% {
     transform: translate(-231px) rotate(18deg); }
   60% {
-    transform: translate(-231px) rotate(-7deg); }
+    transform: translate(-231px) rotate(-8deg); }
   70% {
-    transform: translate(-231px) rotate(5deg); }
+    transform: translate(-231px) rotate(6deg); }
   80% {
-    transform: translate(-231px) rotate(-3deg); }
+    transform: translate(-231px) rotate(-4deg); }
+  85% {
+    transform: translate(-231px) rotate(4deg); }
   90% {
+    transform: translate(-231px) rotate(-3deg); }
+  95% {
     transform: translate(-231px) rotate(2deg); }
   100% {
     transform: translate(-231px) rotate(0deg); } }
@@ -345,9 +349,9 @@ svg {
   z-index: 11;
   color: var(--color);
   position: absolute;
-  font-size: 60px;
+  font-size: 80px;
   top: -250%;
-  left: 150%;
+  left: 130%;
   opacity: 0.5;
   color: var(--color); }
 
@@ -356,9 +360,9 @@ svg {
   z-index: 11;
   color: var(--color);
   position: absolute;
-  font-size: 60px;
+  font-size: 80px;
   top: -250%;
-  left: 150%;
+  left: 130%;
   opacity: 0.5;
   color: var(--color); }
 
@@ -367,8 +371,119 @@ svg {
   z-index: 11;
   color: var(--color);
   position: absolute;
-  font-size: 60px;
+  font-size: 80px;
   top: -250%;
-  left: 180%;
+  left: 170%;
   opacity: 0.5;
   color: var(--color); }
+
+.projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 4rem;
+  padding: 5%; }
+
+.imgbox {
+  width: 570px;
+  height: 323px;
+  overflow: hidden;
+  border-radius: 10px;
+  justify-self: center;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.041), 0 6px 20px 0 rgba(0, 0, 0, 0.055); }
+  .imgbox img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+  .imgbox:hover .text-container::before {
+    width: 100%; }
+  .imgbox:hover .text {
+    transform: scale(1);
+    opacity: 1; }
+
+.text-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.7s; }
+  .text-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: #f8fdfa;
+    opacity: 1;
+    transform: translateX(0) scale(1) skew(-45deg);
+    transition: 0.5s; }
+
+.text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 111;
+  height: 100%;
+  transform: scale(0);
+  transition: 0.5s;
+  opacity: 0; }
+  .text h1 {
+    color: var(--color);
+    font-size: 35px;
+    margin-bottom: 30px; }
+  .text p {
+    width: 50%;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 20px; }
+
+.visit {
+  border: none;
+  display: block;
+  position: relative;
+  padding: 0.5rem 2.2rem;
+  font-size: 24px;
+  cursor: pointer;
+  user-select: none;
+  background-color: transparent;
+  z-index: 1111;
+  color: var(--color);
+  overflow: hidden;
+  margin-top: 20px; }
+  .visit span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: transparent;
+    border: 4px solid var(--color);
+    z-index: -1; }
+    .visit span::before {
+      content: "";
+      position: absolute;
+      width: 10%;
+      height: 500%;
+      background-color: #f8fdfa;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(-60deg);
+      z-index: -1;
+      transition: all 0.6s; }
+
+.visit:hover {
+  color: #f8fdfa; }
+  .visit:hover span::before {
+    transform: translate(-50%, -50%) rotate(-90deg);
+    width: 100%;
+    background-color: var(--color); }
+
+.line {
+  width: 20%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: var(--color); }
