--- a/sass/main.scss
+++ b/sass/main.scss
@@ -491,83 +491,96 @@ svg {
   }
 }
 
-.projects {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  grid-row-gap: 4rem;
-  padding: 5%;
-}
-
-.imgbox {
-  width: 570px;
-  height: 323px;
-
-  overflow: hidden;
-  border-radius: 10px;
-  justify-self: center;
+.projects-container {
   position: relative;
-
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.041),
-    0 6px 20px 0 rgba(0, 0, 0, 0.055);
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  &:hover {
-    .text-container::before {
-      width: 100%;
-    }
-    .text {
-      transform: scale(1);
-      opacity: 1;
-    }
+  height: 600px;
+  .projects_para {
+    font-size: 20px;
+    width: 50%;
+    margin: 4rem auto;
+    color: rgb(87, 86, 86);
+    text-align: center;
   }
 }
-.text-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.7s;
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0%;
-    height: 100%;
-    background-color: #f8fdfa;
-    opacity: 1;
-    transform: translateX(0) scale(1) skew(-45deg);
-    transition: 0.5s;
-    // box-shadow: inset 0 0 10px #00000025;
-  }
+.projects_title {
+  font-size: 34px;
+  color: var(--color);
+  margin: 2rem auto;
+  text-align: center;
+  margin-bottom: 5rem;
 }
 
-.text {
+.slider {
+  position: relative;
+  height: 300px;
+}
+
+.slide {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
-  z-index: 111;
-  height: 100%;
-  transform: scale(0);
-  transition: 0.5s;
-  opacity: 0;
+  position: absolute;
+  display: none;
+  &.activate {
+    display: flex;
+
+    .text h1 {
+      animation: slidein 2s ease forwards;
+    }
+    .text p {
+      animation: slidein 2s ease forwards;
+    }
+    .visit {
+      animation: slidein 2s ease forwards;
+    }
+  }
+}
+.img_box {
+  width: 40%;
+  animation: slide 2s ease forwards;
+  img {
+    width: 100%;
+  }
+}
+
+@keyframes slide {
+  from {
+    opacity: 0;
+    transform: scale(1.2);
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+@keyframes slidein {
+  from {
+    opacity: 0;
+    transform: translateX(-500px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+// .text-container {
+// }
+
+.text {
+  text-align: left;
 
   h1 {
     color: var(--color);
-    font-size: 35px;
+    font-size: 40px;
     margin-bottom: 30px;
   }
   p {
-    width: 50%;
-    text-align: center;
+    width: 80%;
+    text-align: left;
     margin-top: 30px;
     margin-bottom: 20px;
   }
@@ -577,7 +590,7 @@ svg {
   border: none;
   display: block;
   position: relative;
-  padding: 0.5rem 2.2rem;
+  padding: 0.6rem 2.6rem;
   font-size: 24px;
   cursor: pointer;
   user-select: none;
@@ -621,9 +634,54 @@ svg {
   }
 }
 
-.line {
-  width: 20%;
-  height: 2px;
-  border-radius: 4px;
-  background-color: var(--color);
+.controls {
+  font-size: 35px;
+  font-weight: bolder;
+  div {
+    background-color: var(--color);
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 4px solid var(--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
+    transition: 0.4s ease;
+    &:hover {
+      background-color: white;
+      color: var(--color);
+    }
+  }
+  .prev {
+    position: absolute;
+    z-index: 222;
+    top: 65%;
+    left: 2%;
+  }
+
+  .next {
+    position: absolute;
+    z-index: 222;
+    top: 65%;
+    right: 2%;
+  }
+}
+
+.inducator {
+  margin: 50px auto 20px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  div {
+    width: 40px;
+    height: 7px;
+    border-radius: 5px;
+    background-color: #dfffed;
+    margin-right: 6px;
+    &.activate {
+      background-color: var(--color);
+    }
+  }
 }
