--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,18 @@ body {
     border-radius: 8px;
     transition: 0.3s; }
 
+.preload {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/giphy.gif);
+  z-index: 100000;
+  transition: all 0.5s ease; }
+  .preload.end {
+    opacity: 0;
+    pointer-events: none; }
+
 #cursor {
   height: 20px;
   width: 20px;
