--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,20 @@ body {
   }
 }
 
+.preload {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/giphy.gif);
+  z-index: 100000;
+  transition: all 0.5s ease;
+  &.end {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
+
 #cursor {
   height: 20px;
   width: 20px;
