--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,13 +6,16 @@
   box-sizing: border-box;
   outline: none;
 }
+a {
+  text-decoration: none;
+}
 
 :root {
   --color: "#2dc7aa";
 }
 
 body {
-  background-image: url(../img/backg.svg);
+  background-image: url(../img/b.svg);
   background-size: cover;
   background-repeat: no-repeat;
   font-family: "Roboto", sans-serif;
@@ -696,6 +699,144 @@ svg {
     margin-right: 6px;
     &.activate {
       background-color: var(--color);
+    }
+  }
+}
+
+footer {
+  position: relative;
+  margin-top: 90px;
+  height: 600px;
+}
+
+.contact {
+  color: white;
+  background-color: var(--color);
+  width: 360px;
+  padding: 4rem 2rem 1rem;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.137),
+    0 6px 20px 0 rgba(0, 0, 0, 0.205);
+  span {
+    font-size: 22px;
+  }
+  div {
+    display: flex;
+    opacity: 0.8;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  h1 {
+    margin-bottom: 30px;
+  }
+  p {
+    margin-left: 9px;
+    margin-bottom: 30px;
+    width: 60%;
+  }
+  .icons {
+    margin-top: 70px;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 26px;
+    a {
+      opacity: 0.6;
+      cursor: pointer;
+      color: white;
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.contact_form {
+  padding: 70px 50px 50px;
+  background-color: #f8fdfa;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.082),
+    0 6px 20px 0 rgba(0, 0, 0, 0.034);
+  width: 900px;
+  margin-left: 30%;
+  padding-left: 200px;
+  h2 {
+    color: var(--color);
+    font-size: 27px;
+    font-weight: 500;
+  }
+
+  .formbox {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 30px;
+
+    .inputbox {
+      position: relative;
+      margin: 0 0 35px 0;
+      input,
+      textarea {
+        width: 100% !important;
+        padding: 5px 0;
+        font-size: 18px;
+        font-weight: 300;
+        color: rgb(160, 160, 160);
+        border: none;
+        border-bottom: 1px solid var(--color);
+        background-color: transparent;
+        &:focus ~ span {
+          transform: translateY(-20px);
+          color: var(--color);
+          font-size: 12px;
+          letter-spacing: 1px;
+        }
+        &:valid ~ span {
+          transform: translateY(-20px);
+          color: var(--color);
+          font-size: 12px;
+          letter-spacing: 1px;
+        }
+      }
+      input[type="submit"] {
+        position: relative;
+        max-width: 130px;
+        border: 2px solid var(--color);
+        font-size: 20px;
+
+        padding: 9px 0;
+        color: white;
+        cursor: pointer;
+        background-color: var(--color);
+        transition: all 0.3s ease;
+        &:hover {
+          background-color: transparent;
+          color: var(--color);
+        }
+      }
+      textarea {
+        resize: none;
+        min-height: 120px;
+      }
+      span {
+        position: absolute;
+        left: 0;
+        padding: 5px 0;
+        font-size: 18px;
+        font-weight: 300;
+        color: rgb(160, 160, 160);
+        transition: 0.5s;
+        pointer-events: none;
+      }
+      &.w50 {
+        width: 47%;
+      }
+      &.w100 {
+        width: 100%;
+      }
     }
   }
 }
