--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,9 @@ body {
   animation: box 60s infinite;
   top: 50px;
   left: -300px; }
+  @media (max-width: 1000px) {
+    .animate-box {
+      display: none; } }
 
 @keyframes box {
   from {
@@ -259,8 +262,11 @@ svg {
     margin-right: -50px; }
     @media (max-width: 470px) {
       .banner-area .banner-img {
-        transform: scale(0.7);
-        margin-top: 20px; } }
+        height: 400px;
+        margin-top: 20px;
+        margin-right: -30px; }
+        .banner-area .banner-img svg {
+          width: 100%; } }
   .banner-area .left-area {
     margin-top: 180px; }
     @media (max-width: 985px) {
