--- a/sass/main.scss
+++ b/sass/main.scss
@@ -101,6 +101,9 @@ body {
   animation: box 60s infinite;
   top: 50px;
   left: -300px;
+  @include mq(1000px) {
+    display: none;
+  }
 }
 
 @keyframes box {
@@ -338,9 +341,14 @@ svg {
     height: 600px;
     margin-top: 50px;
     margin-right: -50px;
+
     @include mq(470px) {
-      transform: scale(0.7);
+      height: 400px;
       margin-top: 20px;
+      margin-right: -30px;
+      svg {
+        width: 100%;
+      }
     }
   }
 
